--- a/Readme
+++ b/Readme
@@ -1,2 +1,2 @@
 Agricultural diseases are a huge challenge to today's agriculture and forestry, and they always affect human economic benefits. Accurate and rapid diagnosis of plant diseases can reduce economic losses caused by plant diseases in time. However, there are many kinds of plant diseases nowadays, and there are different kinds of plant diseases in plants at different growth stages, which causes non-professionals to distinguish plant diseases not accurately and quickly. With the continuous development of deep learning, image recognition has been widely used in many fields. Compared with the artificial recognition of plant diseases, the use of computer vision technology to recognize not only has low cost and fast timeliness, but also can reduce economic costs and time delays. Loss.
-Some models with significant effects have been proposed in many fields, but the models are basically based on the traditional convolutional architecture model of CNN. Before the convolutional neural network (CNN) is widely used, the characteristics of plant disease images are difficult to extract. However, in terms of the types of agricultural disease image recognition, the past research work generally has a small number of types for classification and recognition, and there are fewer models using modern convolutional network architecture. There is not much research on how to perform fine-grained recognition of various types of plant diseases. .
+Some models with significant effects have been proposed in many fields, but the models are basically based on the traditional convolutional architecture model of CNN. Before the convolutional neural network (CNN) is widely used, the characteristics of plant disease images are difficult to extract. However, in terms of the types of agricultural disease image recognition, the number of types for classification and recognition in the past research work is generally less, and the models using modern convolutional network architecture are less. There is not much research on how to perform fine-grained recognition of various types of plant diseases.
