--- a/Readme
+++ b/Readme
@@ -1,2 +1,2 @@
-Agricultural diseases are a huge challenge to today's agriculture and forestry, and they always affect human economic benefits. Accurate and rapid diagnosis of plant diseases can reduce economic losses caused by plant diseases in time. However, there are many kinds of plant diseases nowadays, and there are different kinds of plant diseases in plants at different growth stages, which causes non-professionals to distinguish plant diseases not accurately and quickly. With the continuous development of deep learning, image recognition has been widely used in many fields. Compared with the artificial recognition of plant diseases, the use of computer vision technology to recognize not only has low cost and fast timeliness, but also can reduce economic costs and time delays. Loss.
-Some models with significant effects have been proposed in many fields, but the models are basically based on the traditional convolutional architecture model of CNN. Before the convolutional neural network (CNN) is widely used, the characteristics of plant disease images are difficult to extract. However, in terms of the types of agricultural disease image recognition, the number of types for classification and recognition in the past research work is generally less, and the models using modern convolutional network architecture are less. There is not much research on how to perform fine-grained recognition of various types of plant diseases.
+农业病害对当今农林业是一个巨大挑战，它时刻影响着人类的经济效益。精准且快速的诊断植物病害可以及时减少植物病害对经济带来的损失。然而如今植物病害种类繁多，不同生长阶段的植物存在不同种类的植物病害，这导致非专业人士对于植物病害的分辨往往不够精确、快速。随着深度学习的不断发展，图像识别在众多领域得到了广泛应用，相对于人工识别植物病害，采用计算机视觉技术识别不仅成本低而且时效快，同时还可以减少经济成本和因为时延所带来的损失。
+在卷积神经网络（Convolutional Neural Networks，CNN）未广泛应用之前，植物病害图像的特征提取十分困难。目前很多学者提出一些效果显著的模型，但是模型基本都是基于CNN的传统卷积架构模型，然而在农业病害图像识别种类上，过去的研究工作进行分类识别的种类数普遍偏少，采用现代卷积网络架构的模型偏少，如何进行高精度、多种类的植物病害识别并没有太多相关研究。
